<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.neu</groupId>
	<artifactId>carbon</artifactId>
	<version>3.3.0</version>

	<name>carbon</name>
	<description>管理系统</description>

	<properties>
		<carbon.version>3.3.0</carbon.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>1.8</java.version>
		<maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
		<druid.version>1.2.4</druid.version>
		<bitwalker.version>1.21</bitwalker.version>
		<swagger.version>2.10.5</swagger.version>
		<kaptcha.version>2.3.2</kaptcha.version>
		<pagehelper.boot.version>1.3.0</pagehelper.boot.version>
		<fastjson.version>1.2.74</fastjson.version>
		<oshi.version>5.3.6</oshi.version>
		<jna.version>5.6.0</jna.version>
		<commons.io.version>2.5</commons.io.version>
		<commons.fileupload.version>1.3.3</commons.fileupload.version>
		<poi.version>4.1.2</poi.version>
		<velocity.version>1.7</velocity.version>
		<jwt.version>0.9.1</jwt.version>
		<log4j.version>2.15.0</log4j.version>
	</properties>

	<!-- 依赖声明 -->
	<dependencyManagement>
		<dependencies>

			<!-- SpringBoot的依赖配置 -->
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<version>2.2.12.RELEASE</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<!--阿里数据库连接池 -->
			<dependency>
				<groupId>com.alibaba</groupId>
				<artifactId>druid-spring-boot-starter</artifactId>
				<version>${druid.version}</version>
			</dependency>

			<!-- 解析客户端操作系统、浏览器等 -->
			<dependency>
				<groupId>eu.bitwalker</groupId>
				<artifactId>UserAgentUtils</artifactId>
				<version>${bitwalker.version}</version>
			</dependency>

			<!-- pagehelper 分页插件 -->
			<dependency>
				<groupId>com.github.pagehelper</groupId>
				<artifactId>pagehelper-spring-boot-starter</artifactId>
				<version>${pagehelper.boot.version}</version>
			</dependency>

			<!-- 获取系统信息 -->
			<dependency>
				<groupId>com.github.oshi</groupId>
				<artifactId>oshi-core</artifactId>
				<version>${oshi.version}</version>
			</dependency>

			<dependency>
				<groupId>net.java.dev.jna</groupId>
				<artifactId>jna</artifactId>
				<version>${jna.version}</version>
			</dependency>

			<dependency>
				<groupId>net.java.dev.jna</groupId>
				<artifactId>jna-platform</artifactId>
				<version>${jna.version}</version>
			</dependency>

			<!-- swagger2 -->
			<dependency>
				<groupId>io.springfox</groupId>
				<artifactId>springfox-swagger2</artifactId>
				<version>${swagger.version}</version>
				<exclusions>
					<exclusion>
						<groupId>io.swagger</groupId>
						<artifactId>swagger-annotations</artifactId>
					</exclusion>
					<exclusion>
						<groupId>io.swagger</groupId>
						<artifactId>swagger-models</artifactId>
					</exclusion>
				</exclusions>
			</dependency>

			<!-- swagger2-UI -->
			<dependency>
				<groupId>io.springfox</groupId>
				<artifactId>springfox-swagger-ui</artifactId>
				<version>${swagger.version}</version>
			</dependency>

			<!-- log4j -->
			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-to-slf4j</artifactId>
				<version>${log4j.version}</version>
			</dependency>

			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-api</artifactId>
				<version>${log4j.version}</version>
			</dependency>

			<!--io常用工具类 -->
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>${commons.io.version}</version>
			</dependency>

			<!--文件上传工具类 -->
			<dependency>
				<groupId>commons-fileupload</groupId>
				<artifactId>commons-fileupload</artifactId>
				<version>${commons.fileupload.version}</version>
			</dependency>

			<!-- excel工具 -->
			<dependency>
				<groupId>org.apache.poi</groupId>
				<artifactId>poi-ooxml</artifactId>
				<version>${poi.version}</version>
			</dependency>

			<!--velocity代码生成使用模板 -->
			<dependency>
				<groupId>org.apache.velocity</groupId>
				<artifactId>velocity</artifactId>
				<version>${velocity.version}</version>
			</dependency>

			<!-- 阿里JSON解析器 -->
			<dependency>
				<groupId>com.alibaba</groupId>
				<artifactId>fastjson</artifactId>
				<version>${fastjson.version}</version>
			</dependency>

			<!--Token生成与解析 -->
			<dependency>
				<groupId>io.jsonwebtoken</groupId>
				<artifactId>jjwt</artifactId>
				<version>${jwt.version}</version>
			</dependency>

			<!--验证码 -->
			<dependency>
				<groupId>com.github.penggle</groupId>
				<artifactId>kaptcha</artifactId>
				<version>${kaptcha.version}</version>
			</dependency>

			<!-- 定时任务 -->
			<dependency>
				<groupId>com.neu</groupId>
				<artifactId>neu-quartz</artifactId>
				<version>${carbon.version}</version>
			</dependency>

			<!-- 代码生成 -->
			<dependency>
				<groupId>com.neu</groupId>
				<artifactId>neu-generator</artifactId>
				<version>${carbon.version}</version>
			</dependency>

			<!-- 核心模块 -->
			<dependency>
				<groupId>com.neu</groupId>
				<artifactId>neu-framework</artifactId>
				<version>${carbon.version}</version>
			</dependency>

			<!-- 系统模块 -->
			<dependency>
				<groupId>com.neu</groupId>
				<artifactId>neu-system</artifactId>
				<version>${carbon.version}</version>
			</dependency>

			<!-- 通用工具 -->
			<dependency>
				<groupId>com.neu</groupId>
				<artifactId>neu-common</artifactId>
				<version>${carbon.version}</version>
			</dependency>

			<!-- 通用业务 -->
			<dependency>
				<groupId>com.neu</groupId>
				<artifactId>neu-common-biz</artifactId>
				<version>${carbon.version}</version>
			</dependency>

			<dependency>
				<groupId>com.neu</groupId>
				<artifactId>neu-carbon-wms</artifactId>
				<version>${carbon.version}</version>
			</dependency>

			<dependency>
				<groupId>com.neu</groupId>
				<artifactId>neu-carbon-mes</artifactId>
				<version>${carbon.version}</version>
			</dependency>

			<dependency>
				<groupId>com.neu</groupId>
				<artifactId>neu-carbon-scm</artifactId>
				<version>${carbon.version}</version>
			</dependency>
			<dependency>
				<groupId>com.neu</groupId>
				<artifactId>neu-carbon-bid</artifactId>
				<version>${carbon.version}</version>
			</dependency>
			<dependency>
				<groupId>com.neu</groupId>
				<artifactId>neu-carbon-footprint</artifactId>
				<version>${carbon.version}</version>
			</dependency>

			<dependency>
				<groupId>com.neu</groupId>
				<artifactId>neu-carbon-report</artifactId>
				<version>${carbon.version}</version>
			</dependency>

			<dependency>
				<groupId>com.neu</groupId>
				<artifactId>neu-carbon-service</artifactId>
				<version>${carbon.version}</version>
			</dependency>
			
			<dependency>
				<groupId>com.neu</groupId>
				<artifactId>neu-carbon-mapper</artifactId>
				<version>${carbon.version}</version>
			</dependency>

		</dependencies>
	</dependencyManagement>

	<modules>
		<module>neu-admin</module>
		<module>neu-framework</module>
		<module>neu-system</module>
		<module>neu-quartz</module>
		<module>neu-generator</module>
		<module>neu-common</module>
		<module>neu-common-biz</module>
		<module>neu-carbon-wms</module>
		<module>neu-carbon-mes</module>
		<module>neu-carbon-bid</module>
		<module>neu-carbon-scm</module>
		<module>neu-carbon-footprint</module>
		<module>neu-carbon-report</module>
		<module>neu-carbon-service</module>
		<module>neu-carbon-mapper</module>
	</modules>
	<packaging>pom</packaging>


	<dependencies>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<encoding>${project.build.sourceEncoding}</encoding>
<!--					<argLine>-->
<!--						-Xmx1024m -XX:MaxPermSize=256m-->
<!--					</argLine>-->
				</configuration>
			</plugin>
		</plugins>
	</build>

	<repositories>
		<repository>
			<id>public</id>
			<name>aliyun nexus</name>
			<url>http://maven.aliyun.com/nexus/content/groups/public/</url>
			<releases>
				<enabled>true</enabled>
			</releases>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>public</id>
			<name>aliyun nexus</name>
			<url>http://maven.aliyun.com/nexus/content/groups/public/</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>

</project>